[gd_scene load_steps=6 format=3 uid="uid://bhdwtxbb6r1eh"]

[ext_resource type="Texture2D" path="res://icon.svg" id="1_opsjl"]
[ext_resource type="Script" path="res://Escenas/TimerData.gd" id="1_q5ubt"]
[ext_resource type="Texture2D" path="res://Assets/fondo.png" id="2_a5pd0"]
[ext_resource type="Texture2D" path="res://Assets/gatoMago.png" id="2_tourb"]
[ext_resource type="Script" path="res://Escenas/Gui.gd" id="3_tourb"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_q5ubt")

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2(711.5, 387)
scale = Vector2(2.0184135, 1.721239)
texture = ExtResource("2_a5pd0")

[node name="Pj" type="Sprite2D" parent="."]
position = Vector2(856, 504)
scale = Vector2(0.5978648, 0.59154934)
texture = ExtResource("2_tourb")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_tourb")

[node name="Button_Salir" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1104.0
offset_top = 8.0
offset_right = 1141.0
offset_bottom = 41.0
text = "X"

[node name="Button_Volver" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1064.0
offset_top = 8.0
offset_right = 1101.0
offset_bottom = 41.0
text = "II"

[node name="Button_Ganaste" type="Button" parent="Control"]
layout_mode = 0
offset_left = 184.0
offset_top = 264.0
offset_right = 336.0
offset_bottom = 376.0
text = "Boton 
de 
Ganaste  =D"

[node name="Button_Perdiste" type="Button" parent="Control"]
layout_mode = 0
offset_left = 344.0
offset_top = 224.0
offset_right = 512.0
offset_bottom = 376.0
text = "Boton 
de 
Perdiste :("

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(56, 608)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_opsjl")

[node name="Icon2" type="Sprite2D" parent="."]
position = Vector2(136, 608)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_opsjl")

[node name="Icon3" type="Sprite2D" parent="."]
position = Vector2(216, 608)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_opsjl")
